2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/Testing.h:
	* TestFramework/README:
	Make it easy to break at the start of a particular failed test.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/Summary.sh:
	* TestFramework/runtest.sh:
	* GNUmakefile.in:
	Simplify by removing intermediary script.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* gnustep-config.in: Add CC to list of variables so we can build
	using the compiler that gnustep-make was configured with.
	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	Add David Chisnall's suggested performance optimisation of handling
	simple cases (where we just need to compile a single source file
	with no special options) by compiling directly ... 25% improvement
	running the base library testsuite on my debian system using clang.

2011-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/README:
	Simplify ... permit only one test file as an argument, so that we can
	infer a single test directory easily (the directory containing the
	file) and thus use the standard code path in which we execute Start.sh
	and End.sh and run GNUmakefile.tests in the directory containing the
	file ... ie so that behavior when executing a single test file is
	identical to behavior when that file is executed as part of a whole
	testsuite.  Don't backup makefile when we create a new one.

2011-01-19  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/README:
	* TestFramework/Testing.h:
	Add support for start and end scripts in each test directory.
	Fix bracketing in macro as suggested by Fred

2011-01-19  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/Summary.sh:
	Portability fixes for systems where grep has limited functionality